Add password reset

--- a/reset/passwordResetConfirm.html
+++ b/reset/passwordResetConfirm.html
@@ -1,29 +1,22 @@
 {% extends 'website/layout.html' %}
-{% block title %}{% if form.email %}Register{% else %}Login{% endif %}{% endblock %}
-{% block registeractive %}
-    {% if form.email %}
-        active
-    {% else %}
-
-    {% endif %}
-{% endblock %}
-{% block loginactive %}
-    {% if form.email %}
-
-    {% else %}
-        active
-    {% endif %}
-{% endblock %}
+{% block title %}Password Reset Confirm{% endblock %}
+{% block profileactive %}active{% endblock %}
 {% block body %}
     <div class="container-fluid">
         <div class="panel panel-default">
             <div class="panel-body">
                 <form class="form form-default" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {% include 'website/form.html' %}
+                    {% if messages %}
+                        <ul class="messages">
+                            {% for message in messages%}
+                                <li class="{{ message.tags }}">{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                    {{ form.as_p }}
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
-                <a href="{% url 'password_reset' %}">Forgot Password?</a>
             </div>
         </div>
     </div>
